webapps/test/v1/WEB-INF/jsp/error/503.jsp
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml">
<head>
<meta charset="UTF-8" />
<link rel="stylesheet" href="${pageContext.request.contextPath}/css/error.css">
<title>503 Service Unavailable</title>
</head>
<body>
	<div class="error-container">
		<h1>503 Service Unavailable</h1>
		<p>The server is temporarily unable to service your
    		request due to maintenance downtime or capacity
    		problems. Please try again later.
		</p>
	</div>
</body>
</html>